@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

TcpServer *-- EventLoopThreadPool
TcpServer *-- EventLoop
TcpServer *-- Acceptor
TcpServer *-- TcpConnection
TcpConnection *-- Channel
Acceptor *-- Socket

class TcpServer {
    - ConnectionMap
    + setConnectionCallback()
    + setMessageCallback()
    + start()
}

class EventLoopThreadPool {
    + start()
    + ioLoop getNextLoop()
}

class EventLoop {
    - vector<functor> pendingFunctors
    + loop()
    + runInLoop()
    + queueInLoop()
}

class TcpConnection {
    - handleRead()
    - handleRead()
}

class Channel {
    + handleEvent()
}

class Socket {
    + bindAddress()
    + listen()
    + accept()
}

class Acceptor {
    - EventLoop* loop_
    + listen()
}



@enduml